@@ -1,3 +1,12 @@
+2026-01-02T02:10:54Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20649283672 # 857
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-02
+* notice: last 14d: unq all: 0 0
+* notice: prev accum: outdated-unq outdated-all / unq all: 53 637 / 53 637
+* notice: next accum: outdated-unq outdated-all / unq all: 53 637 / 53 637
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [] / []
+
 2026-01-01T02:26:21Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20631181923 # 856
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-01
